--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,6 +5,7 @@ description = "Evidence-first form population pipeline"
 requires-python = ">=3.11"
 dependencies = [
     "pydantic>=2.0",
+    "pypdf>=4.0",
 ]
 
 [project.optional-dependencies]
